firefox 57.0rc - updated inflight issue.

--- a/inflight/firefox/firefox-release-rc-57.0rc.json
+++ b/inflight/firefox/firefox-release-rc-57.0rc.json
@@ -51,7 +51,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "win32 EME repacks (LH5h1BHURBuFZuQ87yt4kg) had a '3600 seconds without output' hang, rerun",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
+                }
+            ]
         }
     ],
     "preflight": {
