firefox 57.0rc - updated inflight issue.

--- a/inflight/firefox/firefox-release-rc-57.0rc.json
+++ b/inflight/firefox/firefox-release-rc-57.0rc.json
@@ -57,7 +57,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "55.0.3 partial left out of ship-it, fix that in build3",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
+                }
+            ]
         },
         {
             "aborted": true,
