firefox 57.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-57.0rc.json
+++ b/inflight/firefox/firefox-release-rc-57.0rc.json
@@ -62,7 +62,7 @@
                     "bug": "none",
                     "description": "55.0.3 partial left out of ship-it, fix that in build3",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "nthomas"
                 }
             ]
