--- a/inflight/firefox/firefox-release-rc-57.0rc.json
+++ b/inflight/firefox/firefox-release-rc-57.0rc.json
@@ -57,7 +57,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "funsize-update-generator docker image (ZhhoQjUdSauGrCMc2QEMNA) hit a hang while installing packages, reran",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
+                }
+            ]
         },
         {
             "aborted": true,
