fennec 57.0 - updated inflight tasks. Resolved ('2', '3', '4')

--- a/inflight/fennec/fennec-release-57.0.json
+++ b/inflight/fennec/fennec-release-57.0.json
@@ -16,19 +16,19 @@
                     "alias": "candidates",
                     "description": "emailed candidates",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "pushapk",
                     "description": "run pushapk",
                     "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/fennec-temp-relpro.md#run-pushapk-manually",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "publish",
                     "description": "published release tasks",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
