fennec 57.0.1 - syncing wiki with current data

--- a/inflight/fennec/fennec-release-57.0.1.json
+++ b/inflight/fennec/fennec-release-57.0.1.json
@@ -5,6 +5,7 @@
             "aborted": false,
             "buildnum": 1,
             "graphids": [
+                "LfAtlzm5Ro6nq0DNy4TbbA",
                 "BTAzEThMSl6MzoN16E5e6g"
             ],
             "human_tasks": [
