--- a/inflight/fennec/fennec-release-57.0.1.json
+++ b/inflight/fennec/fennec-release-57.0.1.json
@@ -19,7 +19,7 @@
                     "alias": "candidates",
                     "description": "emailed candidates",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "pushapk",
