--- a/inflight/firefox/firefox-release-57.0.1.json
+++ b/inflight/firefox/firefox-release-57.0.1.json
@@ -41,8 +41,8 @@
             ],
             "issues": [
                 {
-                    "bug": "none",
-                    "description": "UV tasks failing. localtest/cdntest pointed to old 57.0 wnp blobs rather than 57.0.1. Updated 4 wnp rules in both local and cdntest. Need to rerun and ver",
+                    "bug": "1421535",
+                    "description": "UV tasks failing. localtest/cdntest pointed to old 57.0 wnp blobs rather than 57.0.1. Updated 4 wnp rules in both local and cdntest. Still failing. Could be bad wnp blobs",
                     "future_threat": true,
                     "resolved": false,
                     "who": "jlund"
