--- a/inflight/firefox/firefox-release-57.0.1.json
+++ b/inflight/firefox/firefox-release-57.0.1.json
@@ -42,7 +42,7 @@
             "issues": [
                 {
                     "bug": "1421535",
-                    "description": "UV tasks failing. localtest/cdntest pointed to old 57.0 wnp blobs rather than 57.0.1. Updated 4 wnp rules in both local and cdntest. Still failing. Could be bad wnp blobs",
+                    "description": "UV tasks failing. localtest/cdntest pointed to old 57.0 wnp blobs rather than 57.0.1. Updated 4 wnp rules in both local and cdntest. Still failing. Need the special hack to query balrog properly, rerunning with that",
                     "future_threat": true,
                     "resolved": false,
                     "who": "jlund"
