--- a/inflight/firefox/firefox-release-57.0.1.json
+++ b/inflight/firefox/firefox-release-57.0.1.json
@@ -3,6 +3,53 @@
     "inflight": [
         {
             "aborted": false,
+            "buildnum": 2,
+            "graphids": [],
+            "human_tasks": [
+                {
+                    "alias": "shipit",
+                    "description": "submit to Shipit",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Starting_a_Release#Submit_to_Ship_It",
+                    "resolved": true
+                },
+                {
+                    "alias": "wnp",
+                    "description": "setup whatsnew page",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Updates_through_Shipping#Set-up_whatsnew_page",
+                    "resolved": false
+                },
+                {
+                    "alias": "mirrors",
+                    "description": "pushed to mirrors/releases",
+                    "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#2-push-to-releases-dir-mirrors",
+                    "resolved": false
+                },
+                {
+                    "alias": "publish",
+                    "description": "publish release tasks",
+                    "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#4-publish-release",
+                    "resolved": false
+                },
+                {
+                    "alias": "signoff",
+                    "description": "signoff in Balrog",
+                    "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#3-signoffs",
+                    "resolved": false
+                }
+            ],
+            "issues": [
+                {
+                    "bug": "1421535",
+                    "description": "UV tasks failing. localtest/cdntest pointed to old 57.0 wnp blobs rather than 57.0.1. Updated 4 wnp rules in both local and cdntest. Still failing. Need the special hack to query balrog properly, rerunning with that",
+                    "future_threat": true,
+                    "id": 1,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
+        },
+        {
+            "aborted": true,
             "buildnum": 1,
             "graphids": [
                 "JdNt2YXDQza7VIFbXTu2-A"
