firefox 57.0.1 - updated graphid

--- a/inflight/firefox/firefox-release-57.0.1.json
+++ b/inflight/firefox/firefox-release-57.0.1.json
@@ -4,7 +4,9 @@
         {
             "aborted": false,
             "buildnum": 2,
-            "graphids": [],
+            "graphids": [
+                "OS7RbckhT5Stq0veDue6-A"
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
