--- a/inflight/firefox/firefox-release-57.0.1.json
+++ b/inflight/firefox/firefox-release-57.0.1.json
@@ -45,7 +45,7 @@
                     "description": "UV tasks failing. localtest/cdntest pointed to old 57.0 wnp blobs rather than 57.0.1. Updated 4 wnp rules in both local and cdntest. Still failing. Need the special hack to query balrog properly, rerunning with that",
                     "future_threat": true,
                     "id": 1,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 }
             ]
