fennec 57.0.1 - updated inflight tasks. Resolved ('3', '4')

--- a/inflight/fennec/fennec-release-57.0.1.json
+++ b/inflight/fennec/fennec-release-57.0.1.json
@@ -25,13 +25,13 @@
                     "alias": "pushapk",
                     "description": "run pushapk",
                     "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/fennec-temp-relpro.md#run-pushapk-manually",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "publish",
                     "description": "published release tasks",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": []
