firefox 57.0.2 - updated inflight issue.

--- a/inflight/firefox/firefox-release-57.0.2.json
+++ b/inflight/firefox/firefox-release-57.0.2.json
@@ -45,7 +45,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1423663",
+                    "description": "Docker generation for ubuntu:vivid distro failing due to EOL of vivid. Affected funsize and beetmover. Pushed a fix to repos.",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
+                }
+            ]
         }
     ],
     "preflight": {
