--- a/inflight/firefox/firefox-release-57.0.2.json
+++ b/inflight/firefox/firefox-release-57.0.2.json
@@ -49,8 +49,8 @@
                 {
                     "bug": "1423663",
                     "description": "Docker generation for ubuntu:vivid distro failing due to EOL of vivid. Affected funsize and beetmover. Pushed a fix to repos.",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
