thunderbird 52.5.2 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-52.5.2.json
+++ b/inflight/thunderbird/thunderbird-release-52.5.2.json
@@ -37,7 +37,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "1426790",
+                    "description": "Scheduling balrog change failed, not allowed to use an alias. Manually scheduled instead",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
+                }
+            ]
         }
     ],
     "preflight": {
