thunderbird 52.5.2 - updated inflight issue. Resolved ('1',)

--- a/inflight/thunderbird/thunderbird-release-52.5.2.json
+++ b/inflight/thunderbird/thunderbird-release-52.5.2.json
@@ -42,7 +42,7 @@
                     "bug": "1426790",
                     "description": "Scheduling balrog change failed, not allowed to use an alias. Manually scheduled instead",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "nthomas"
                 }
             ]
