--- a/inflight/firefox/firefox-release-57.0.3.json
+++ b/inflight/firefox/firefox-release-57.0.3.json
@@ -56,7 +56,7 @@
                     "bug": "1421535",
                     "description": "update verify failures. needed to: https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 }
             ]
