--- a/inflight/firefox/firefox-release-57.0.4.json
+++ b/inflight/firefox/firefox-release-57.0.4.json
@@ -13,6 +13,12 @@
                     "resolved": true
                 },
                 {
+                    "alias": "",
+                    "description": "patch patcher configs after we gtb to support JAWS. Similar tools patch needed is linked in how-to",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
+                    "resolved": false
+                },
+                {
                     "alias": "wnp",
                     "description": "setup whatsnew page",
                     "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Updates_through_Shipping#Set-up_whatsnew_page",
