--- a/inflight/firefox/firefox-release-57.0.4.json
+++ b/inflight/firefox/firefox-release-57.0.4.json
@@ -19,6 +19,12 @@
                     "resolved": false
                 },
                 {
+                    "alias": "",
+                    "description": "more specifically for wnp, two blobs (official and bz2) and 4 rules (2 official, 2 bz2) are needed to be updated for localtest, cdntest. This can be done after the first update verify task starts. After this and patcher patch is applied, rerun any failed update verify tasks.",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
+                    "resolved": false
+                },
+                {
                     "alias": "wnp",
                     "description": "setup whatsnew page",
                     "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Updates_through_Shipping#Set-up_whatsnew_page",
