--- a/inflight/firefox/firefox-release-57.0.4.json
+++ b/inflight/firefox/firefox-release-57.0.4.json
@@ -3,6 +3,70 @@
     "inflight": [
         {
             "aborted": false,
+            "buildnum": 2,
+            "graphids": [
+                "IR_N2kt6QzG67I9Wx_twcw"
+            ],
+            "human_tasks": [
+                {
+                    "alias": "shipit",
+                    "description": "submit to Shipit",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Starting_a_Release#Submit_to_Ship_It",
+                    "resolved": true
+                },
+                {
+                    "alias": "",
+                    "description": "patch patcher configs after we gtb to support JAWS. Similar tools patch needed is linked in how-to",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
+                    "resolved": false
+                },
+                {
+                    "alias": "",
+                    "description": "more specifically for wnp, two blobs (official and bz2) and 4 rules (2 official, 2 bz2) are needed to be updated for localtest, cdntest. This can be done after the first update verify task starts. After this and patcher patch is applied, rerun any failed update verify tasks.",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
+                    "resolved": false
+                },
+                {
+                    "alias": "wnp",
+                    "description": "setup whatsnew page",
+                    "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Updates_through_Shipping#Set-up_whatsnew_page",
+                    "resolved": false
+                },
+                {
+                    "alias": "",
+                    "description": "run bensScript against cdntest (run again after we publish on release and sign off)",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c9",
+                    "resolved": false
+                },
+                {
+                    "alias": "mirrors",
+                    "description": "pushed to mirrors/releases",
+                    "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#2-push-to-releases-dir-mirrors",
+                    "resolved": false
+                },
+                {
+                    "alias": "publish",
+                    "description": "publish release tasks",
+                    "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#4-publish-release",
+                    "resolved": false
+                },
+                {
+                    "alias": "",
+                    "description": "similar to wnp setup for local/cdntest, the 4 release rules should be scheduled to be updated. The two none wnp rules that automation knows about, will be scheduled for sign off automatically",
+                    "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
+                    "resolved": false
+                },
+                {
+                    "alias": "signoff",
+                    "description": "signoff in Balrog",
+                    "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#3-signoffs",
+                    "resolved": false
+                }
+            ],
+            "issues": []
+        },
+        {
+            "aborted": true,
             "buildnum": 1,
             "graphids": [],
             "human_tasks": [
