firefox 57.0.4 - updated inflight issue.

--- a/inflight/firefox/firefox-release-57.0.4.json
+++ b/inflight/firefox/firefox-release-57.0.4.json
@@ -63,7 +63,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "firefox mozilla-release win64 l10n repack 4/10 (fcgk1lrFQO6UiWsrO8CpHA), firefox mozilla-beta win32 l10n repack 2/10 (LeqqL7hIRJ2AbDPNRFgz_w) timed out cloning hg repo",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlorenzo"
+                }
+            ]
         },
         {
             "aborted": true,
