Filed bug about failed clones

--- a/inflight/firefox/firefox-release-57.0.4.json
+++ b/inflight/firefox/firefox-release-57.0.4.json
@@ -65,8 +65,8 @@
             ],
             "issues": [
                 {
-                    "bug": "none",
-                    "description": "firefox mozilla-release win64 l10n repack 4/10 (fcgk1lrFQO6UiWsrO8CpHA), firefox mozilla-beta win32 l10n repack 2/10 (LeqqL7hIRJ2AbDPNRFgz_w) timed out cloning hg repo",
+                    "bug": "1428026",
+                    "description": "Repacks on bbb failed to robustcheckout repos: timeout after 1800 seconds",
                     "future_threat": true,
                     "resolved": false,
                     "who": "jlorenzo"
