fennec 57.0.4 - updated inflight issue.

--- a/inflight/fennec/fennec-release-57.0.4.json
+++ b/inflight/fennec/fennec-release-57.0.4.json
@@ -33,7 +33,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "Fennec releasewarrior steps still list candidates email for releases",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
+                }
+            ]
         }
     ],
     "preflight": {
