fennec 57.0.4 - updated inflight issue.

--- a/inflight/fennec/fennec-release-57.0.4.json
+++ b/inflight/fennec/fennec-release-57.0.4.json
@@ -40,6 +40,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "callek"
+                },
+                {
+                    "bug": "none",
+                    "description": "Fennec releasewarrior steps don't link to docs for publish release for releases",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
                 }
             ]
         }
