--- a/inflight/fennec/fennec-release-57.0.4.json
+++ b/inflight/fennec/fennec-release-57.0.4.json
@@ -30,7 +30,7 @@
                     "alias": "publish",
                     "description": "published release tasks",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": [
