fennec 57.0.4 - updated inflight issue. Resolved ('1',)

--- a/inflight/fennec/fennec-release-57.0.4.json
+++ b/inflight/fennec/fennec-release-57.0.4.json
@@ -38,7 +38,7 @@
                     "bug": "none",
                     "description": "Fennec releasewarrior steps still list candidates email for releases",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 },
                 {
