--- a/inflight/fennec/fennec-release-57.0.4.json
+++ b/inflight/fennec/fennec-release-57.0.4.json
@@ -45,7 +45,7 @@
                     "bug": "none",
                     "description": "Fennec releasewarrior steps don't link to docs for publish release for releases",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
