--- a/inflight/firefox/firefox-release-57.0.4.json
+++ b/inflight/firefox/firefox-release-57.0.4.json
@@ -48,19 +48,19 @@
                     "alias": "publish",
                     "description": "publish release tasks",
                     "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#4-publish-release",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "",
                     "description": "similar to wnp setup for local/cdntest, the 4 release rules should be scheduled to be updated. The two none wnp rules that automation knows about, will be scheduled for sign off automatically",
                     "docs": "https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "signoff",
                     "description": "signoff in Balrog",
                     "docs": "https://github.com/mozilla/releasewarrior/blob/master/how-tos/relpro.md#3-signoffs",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": [
