--- a/upcoming/firefox/firefox-release-rc-58.0rc.json
+++ b/upcoming/firefox/firefox-release-rc-58.0rc.json
@@ -26,7 +26,7 @@
                 },
                 {
                     "alias": "wnp",
-                    "description": "setup whatsnew page",
+                    "description": "setup whatsnew page (bug 1428419)",
                     "docs": "https://wiki.mozilla.org/Release:Release_Automation_on_Mercurial:Updates_through_Shipping#Set-up_whatsnew_page",
                     "resolved": false
                 },
