firefox 58.0rc - updated prerequisites.

--- a/upcoming/firefox/firefox-release-rc-58.0rc.json
+++ b/upcoming/firefox/firefox-release-rc-58.0rc.json
@@ -53,7 +53,14 @@
         }
     ],
     "preflight": {
-        "human_tasks": []
+        "human_tasks": [
+            {
+                "bug": "1415557",
+                "deadline": "2018-01-15",
+                "description": "this is actually a post gtb human task but we are limited in rw and can't create ad-hoc tasks until after gtb. We should merge, fix conflicts of the patcher patch we have needed since 57.0. Context: https://bugzilla.mozilla.org/show_bug.cgi?id=1415557#c9 and recent example tools patch with required retagging can be found here: https://bugzilla.mozilla.org/show_bug.cgi?id=1421535#c8 *Note*: we still need proper docs on how to do this I believe.",
+                "resolved": false
+            }
+        ]
     },
     "product": "firefox",
     "version": "58.0rc"
